<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="eu.mcomputing.mobv.mobvzadanie.viewmodels.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:layout_margin="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toTopOf="@id/load_profile_btn"
            app:layout_constraintBottom_toBottomOf="@id/load_profile_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/name"
            android:text="@{model.userResult.username}"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/load_profile_btn"
            android:text="@string/nacitaj_profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/activity_horizontal_margin" />

        <TextView
            android:id="@+id/location_label"
            android:text="Share my location"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/location_switch"
            app:layout_constraintBottom_toBottomOf="@id/location_switch"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_margin="16dp"
            android:checked="@={model.sharingLocation}"
            android:id="@+id/location_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/logout_btn"
            android:text="@string/odhlasit_sa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_label"
            android:layout_margin="@dimen/activity_horizontal_margin" />


        <eu.mcomputing.mobv.mobvzadanie.widgets.bottomBar.BottomBar
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>